// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create restore DB job 1`] = `
Array [
  Object {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": Object {
      "annotations": Object {
        "kapp.k14s.io/update-strategy": "always-replace",
      },
      "labels": Object {
        "application": "sample",
        "component": "restore-db-my-test-branch-45q3uw",
        "owner": "sample",
        "team": "sample",
      },
      "name": "restore-db-my-test-branch-45q3uw",
      "namespace": "sample-next-app-secret",
    },
    "spec": Object {
      "backoffLimit": 0,
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "kapp.k14s.io/deploy-logs": "for-new-or-existing",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "sh",
                "-c",
                "

echo \\"starting restore into $PGHOST/$PGDATABASE\\"

[ ! -z $PGDATABASE ] || (echo \\"No PGDATABASE\\"; exit 1)
[ ! -z $PGHOST ] || (echo \\"No PGHOST\\"; exit 1)
[ ! -z $PGUSER ] || (echo \\"No PGUSER\\"; exit 1)
[ ! -z $PGPASSWORD ] || (echo \\"No PGPASSWORD\\"; exit 1)
[ ! -z $OWNER ] || (echo \\"No OWNER\\"; exit 1)

# get latest backup folder
LATEST=$(ls -1Fr /mnt/data | head -n 1);
DUMP=\\"/mnt/data/\${LATEST}\${FILE}\\"
echo \\"Restore \${DUMP} into \${PGDATABASE}\\";

pg_isready;

pg_restore   --dbname \${PGDATABASE}   --clean --if-exists   --exclude-schema=audit   --no-owner   --role \${OWNER}   --no-acl   --verbose   \${DUMP};

psql -v ON_ERROR_STOP=1 \${PGDATABASE} -c \\"ALTER SCHEMA public owner to \${OWNER};\\"

[ -f \\"/mnt/scripts/post-restore.sql\\" ] && psql -v ON_ERROR_STOP=1 -a < /mnt/scripts/post-restore.sql
",
              ],
              "env": Array [
                Object {
                  "name": "PGDATABASE",
                  "value": "db_64105",
                },
                Object {
                  "name": "OWNER",
                  "value": "user_64105",
                },
                Object {
                  "name": "FILE",
                  "value": "product_prod_db.psql.gz",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-admin-user-dev",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/azure-db:6.43.1",
              "imagePullPolicy": "IfNotPresent",
              "name": "restore-db",
              "resources": Object {
                "limits": Object {
                  "cpu": "300m",
                  "memory": "512Mi",
                },
                "requests": Object {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/mnt/data",
                  "name": "backups",
                },
              ],
            },
          ],
          "initContainers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "PGHOST",
                  "value": "sampledevserver.postgres.database.azure.com",
                },
                Object {
                  "name": "PGDATABASE",
                  "value": "autodevops_my-test-branch",
                },
                Object {
                  "name": "PGPASSWORD",
                  "value": "password_my-test-branch",
                },
                Object {
                  "name": "PGUSER",
                  "value": "user_my-test-branch@sampledevserver.postgres.database.azure.com",
                },
                Object {
                  "name": "PGSSLMODE",
                  "value": "require",
                },
              ],
              "envFrom": Array [],
              "image": "ghcr.io/socialgouv/docker/wait-for-postgres:6.43.1",
              "imagePullPolicy": "Always",
              "name": "wait-for-postgres",
              "resources": Object {
                "limits": Object {
                  "cpu": "20m",
                  "memory": "32Mi",
                },
                "requests": Object {
                  "cpu": "5m",
                  "memory": "16Mi",
                },
              },
            },
          ],
          "restartPolicy": "OnFailure",
          "volumes": Array [
            Object {
              "name": "backups",
              "persistentVolumeClaim": Object {
                "claimName": "sample-next-app-backup-restore",
                "readOnly": true,
              },
            },
          ],
        },
      },
      "ttlSecondsAfterFinished": 86400,
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "sample-next-app-backup-restore",
      "namespace": "sample-next-app-secret",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "resources": Object {
        "requests": Object {
          "storage": "128Gi",
        },
      },
      "selector": Object {
        "matchLabels": Object {
          "usage": "my-test-sample-next-app-backup-restore",
        },
      },
      "storageClassName": "",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolume",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
        "usage": "my-test-sample-next-app-backup-restore",
      },
      "name": "my-test-sample-next-app-backup-restore",
      "namespace": "sample-next-app-secret",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "azureFile": Object {
        "secretName": "azure-samplenextappprod-volume",
        "secretNamespace": "sample-next-app-secret",
        "shareName": "sample-next-app-backup-restore",
      },
      "capacity": Object {
        "storage": "128Gi",
      },
      "persistentVolumeReclaimPolicy": "Delete",
      "storageClassName": "",
    },
  },
]
`;

exports[`should create restore DB job with post-restore script 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "post-restore.sql": "DELETE * from users;",
    },
    "kind": "ConfigMap",
    "metadata": Object {
      "name": "post-restore-script-configmap-my-test-branch-3mtyhl",
      "namespace": "sample-next-app-secret",
    },
  },
  Object {
    "apiVersion": "batch/v1",
    "kind": "Job",
    "metadata": Object {
      "annotations": Object {
        "kapp.k14s.io/update-strategy": "always-replace",
      },
      "labels": Object {
        "application": "sample",
        "component": "restore-db-my-test-branch-45q3uw",
        "owner": "sample",
        "team": "sample",
      },
      "name": "restore-db-my-test-branch-45q3uw",
      "namespace": "sample-next-app-secret",
    },
    "spec": Object {
      "backoffLimit": 0,
      "template": Object {
        "metadata": Object {
          "annotations": Object {
            "kapp.k14s.io/deploy-logs": "for-new-or-existing",
          },
        },
        "spec": Object {
          "containers": Array [
            Object {
              "command": Array [
                "sh",
                "-c",
                "

echo \\"starting restore into $PGHOST/$PGDATABASE\\"

[ ! -z $PGDATABASE ] || (echo \\"No PGDATABASE\\"; exit 1)
[ ! -z $PGHOST ] || (echo \\"No PGHOST\\"; exit 1)
[ ! -z $PGUSER ] || (echo \\"No PGUSER\\"; exit 1)
[ ! -z $PGPASSWORD ] || (echo \\"No PGPASSWORD\\"; exit 1)
[ ! -z $OWNER ] || (echo \\"No OWNER\\"; exit 1)

# get latest backup folder
LATEST=$(ls -1Fr /mnt/data | head -n 1);
DUMP=\\"/mnt/data/\${LATEST}\${FILE}\\"
echo \\"Restore \${DUMP} into \${PGDATABASE}\\";

pg_isready;

pg_restore   --dbname \${PGDATABASE}   --clean --if-exists   --exclude-schema=audit   --no-owner   --role \${OWNER}   --no-acl   --verbose   \${DUMP};

psql -v ON_ERROR_STOP=1 \${PGDATABASE} -c \\"ALTER SCHEMA public owner to \${OWNER};\\"

[ -f \\"/mnt/scripts/post-restore.sql\\" ] && psql -v ON_ERROR_STOP=1 -a < /mnt/scripts/post-restore.sql
",
              ],
              "env": Array [
                Object {
                  "name": "PGDATABASE",
                  "value": "db_64105",
                },
                Object {
                  "name": "OWNER",
                  "value": "user_64105",
                },
                Object {
                  "name": "FILE",
                  "value": "product_prod_db.psql.gz",
                },
              ],
              "envFrom": Array [
                Object {
                  "secretRef": Object {
                    "name": "azure-pg-admin-user-dev",
                  },
                },
              ],
              "image": "ghcr.io/socialgouv/docker/azure-db:6.43.1",
              "imagePullPolicy": "IfNotPresent",
              "name": "restore-db",
              "resources": Object {
                "limits": Object {
                  "cpu": "300m",
                  "memory": "512Mi",
                },
                "requests": Object {
                  "cpu": "100m",
                  "memory": "64Mi",
                },
              },
              "volumeMounts": Array [
                Object {
                  "mountPath": "/mnt/data",
                  "name": "backups",
                },
                Object {
                  "mountPath": "/mnt/scripts",
                  "name": "scripts",
                },
              ],
            },
          ],
          "initContainers": Array [
            Object {
              "env": Array [
                Object {
                  "name": "PGHOST",
                  "value": "sampledevserver.postgres.database.azure.com",
                },
                Object {
                  "name": "PGDATABASE",
                  "value": "autodevops_my-test-branch",
                },
                Object {
                  "name": "PGPASSWORD",
                  "value": "password_my-test-branch",
                },
                Object {
                  "name": "PGUSER",
                  "value": "user_my-test-branch@sampledevserver.postgres.database.azure.com",
                },
                Object {
                  "name": "PGSSLMODE",
                  "value": "require",
                },
              ],
              "envFrom": Array [],
              "image": "ghcr.io/socialgouv/docker/wait-for-postgres:6.43.1",
              "imagePullPolicy": "Always",
              "name": "wait-for-postgres",
              "resources": Object {
                "limits": Object {
                  "cpu": "20m",
                  "memory": "32Mi",
                },
                "requests": Object {
                  "cpu": "5m",
                  "memory": "16Mi",
                },
              },
            },
          ],
          "restartPolicy": "OnFailure",
          "volumes": Array [
            Object {
              "name": "backups",
              "persistentVolumeClaim": Object {
                "claimName": "sample-next-app-backup-restore",
                "readOnly": true,
              },
            },
            Object {
              "configMap": Object {
                "name": "post-restore-script-configmap-my-test-branch-3mtyhl",
              },
              "name": "scripts",
            },
          ],
        },
      },
      "ttlSecondsAfterFinished": 86400,
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolumeClaim",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
      },
      "name": "sample-next-app-backup-restore",
      "namespace": "sample-next-app-secret",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "resources": Object {
        "requests": Object {
          "storage": "128Gi",
        },
      },
      "selector": Object {
        "matchLabels": Object {
          "usage": "my-test-sample-next-app-backup-restore",
        },
      },
      "storageClassName": "",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "PersistentVolume",
    "metadata": Object {
      "annotations": Object {
        "app.gitlab.com/app": "socialgouv-sample",
        "app.gitlab.com/env": "my-test",
      },
      "labels": Object {
        "application": "sample",
        "owner": "sample",
        "team": "sample",
        "usage": "my-test-sample-next-app-backup-restore",
      },
      "name": "my-test-sample-next-app-backup-restore",
      "namespace": "sample-next-app-secret",
    },
    "spec": Object {
      "accessModes": Array [
        "ReadWriteMany",
      ],
      "azureFile": Object {
        "secretName": "azure-samplenextappprod-volume",
        "secretNamespace": "sample-next-app-secret",
        "shareName": "sample-next-app-backup-restore",
      },
      "capacity": Object {
        "storage": "128Gi",
      },
      "persistentVolumeReclaimPolicy": "Delete",
      "storageClassName": "",
    },
  },
]
`;
